# papermes

./: .gitignore  README.md
.github/: copilot-instructions.md
app/: README.md  build.gradle.kts  gradle.properties  gradlew.bat  local.properties  settings.gradle.kts
app/app/: build.gradle.kts  proguard-rules.pro
app/app/src/main/: AndroidManifest.xml
app/app/src/main/java/com/papermes/documentscanner/: DocumentScannerApplication.kt
app/app/src/main/java/com/papermes/documentscanner/data/: AppDatabase.kt  Converters.kt  DocumentDao.kt  DocumentEntity.kt
app/app/src/main/java/com/papermes/documentscanner/ml/: DocumentDetector.kt
app/app/src/main/java/com/papermes/documentscanner/network/: ApiService.kt
app/app/src/main/java/com/papermes/documentscanner/receiver/: BootReceiver.kt
app/app/src/main/java/com/papermes/documentscanner/repository/: DocumentRepository.kt
app/app/src/main/java/com/papermes/documentscanner/service/: DocumentScannerService.kt
app/app/src/main/java/com/papermes/documentscanner/ui/: MainActivity.kt
app/app/src/main/java/com/papermes/documentscanner/utils/: MediaScanner.kt  NetworkUtils.kt  PermissionUtils.kt  PreferencesManager.kt
app/app/src/main/res/drawable/: ic_document.xml
app/app/src/main/res/layout/: activity_main.xml
app/app/src/main/res/mipmap-mdpi/: ic_launcher.xml
app/app/src/main/res/mipmap-xhdpi/: ic_launcher_round.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  preferences.xml
app/gradle/wrapper/: gradle-wrapper.properties
backend/: config.py  config.yml  pyproject.toml  run_host.py
backend/src/host/: host.py
backend/src/lib/: firefly_client.py
backend/src/mcp/: client.py  server.py
backend/src/mcp_server/: client.py  server.py
backend/src/mcp_server/prompts/: developer_bookkeeping_context.jinja2  user_analyze_receipt.jinja2
backend/src/playground/: analyze_receipt.py  fireflyapi.py  play_api.py
backend/src/server/: server.py
backend/tests/: conftest.py
backend/tests/integration/: test_firefly_client.py  test_firefly_client_integration.py
backend/tests/llm/: test_llm_analyze_receipt.py  test_llm_analyze_receipt_llm.py
backend/tests/unit/: test_config.py  test_encode_image.py  test_firefly_client.py  test_mcp_server_prompts.py
firefly-iii/: docker-compose.yml
paperless-ngx/: docker-compose.env  docker-compose.yml
