[project]
name = "papermes"
version = "0.1.0"
description = "My Document Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "truststore>=0.10.1",
    "fastmcp>=2.8.1",
    "httpx>=0.25.0",
    "pytest>=7.0.0",
    "pyfirefly>=0.1.3",
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.34.3",
    "python-multipart>=0.0.20",
]

[tool.pytest.ini_options]
# Pytest configuration for papermes backend

# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output formatting
addopts = [
    "-v",                    # Verbose output
    "--tb=short",           # Short traceback format
    "--strict-markers",     # Strict marker enforcement
    "--disable-warnings",   # Disable warnings for cleaner output
]

# Test markers
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that require external services (Firefly III, etc.)",
    "slow: Tests that take a long time to run",
]

# Minimum version
minversion = "7.0"

# Test timeout (if pytest-timeout is installed)
timeout = 300

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
