[project]
name = "papermes"
version = "0.1.0"
description = "Mes Document Management System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "truststore>=0.10.1",
    "fastmcp>=2.8.1",
    "httpx>=0.25.0",
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.34.3",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.10.0",
    "pyyaml>=6.0.2",
    "firefly-client",
]

[tool.uv.workspace]
members = ["packages/firefly_client"]

[tool.uv.sources]
firefly-client = { workspace = true }

[tool.pytest.ini_options]
# Pytest configuration for papermes backend

# Test discovery
testpaths = ["tests", "packages/*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output formatting
addopts = [
    "-v",                    # Verbose output
    "--tb=short",           # Short traceback format
    "--strict-markers",     # Strict marker enforcement
    "--disable-warnings",   # Disable warnings for cleaner output
]

# Test markers
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that require external services (Firefly III, etc.)",
    "slow: Tests that take a long time to run",
    "creates_data: Tests that create real data in external services (use with caution)",
    "api_cost: Tests that incur API costs (e.g., OpenAI API calls)",
    "asyncio: Async tests that require asyncio event loop",
]

# Minimum version
minversion = "7.0"

# Test timeout (if pytest-timeout is installed)
timeout = 300

# Filter warnings
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
